avance de simulador

--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "react-dom": "^16.6.0",
     "react-router-dom": "^4.3.1",
     "react-simple-maps": "^0.12.1",
+    "react-tooltip": "^3.9.0",
+    "redux-tooltip": "^0.7.2",
     "resolve": "1.8.1",
     "sass-loader": "^7.1.0",
     "style-loader": "0.23.0",
