--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-dom": "^16.6.0",
     "react-router-dom": "^4.3.1",
     "react-simple-maps": "^0.12.1",
+    "react-simple-tooltip": "^2.3.2",
     "react-tooltip": "^3.9.0",
     "redux-tooltip": "^0.7.2",
     "resolve": "1.8.1",
