--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "jest": "23.6.0",
     "jest-pnp-resolver": "1.0.1",
     "jest-resolve": "23.6.0",
+    "js-file-download": "^0.4.4",
     "mini-css-extract-plugin": "0.4.3",
     "node-sass": "^4.9.3",
     "optimize-css-assets-webpack-plugin": "5.0.1",
@@ -49,6 +50,7 @@
     "react-simple-maps": "^0.12.1",
     "react-simple-tooltip": "^2.3.2",
     "react-tooltip": "^3.9.0",
+    "recharts": "^1.4.1",
     "redux-tooltip": "^0.7.2",
     "resolve": "1.8.1",
     "sass-loader": "^7.1.0",
