--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "jest-resolve": "23.6.0",
     "js-file-download": "^0.4.4",
     "mini-css-extract-plugin": "0.4.3",
+    "moment": "^2.22.2",
     "node-sass": "^4.9.3",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "pnp-webpack-plugin": "1.1.0",
