--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "react-app-polyfill": "^0.1.3",
     "react-dev-utils": "^6.0.4",
     "react-dom": "^16.6.0",
+    "react-full-screen": "^0.2.3",
+    "react-motion": "^0.5.2",
     "react-router-dom": "^4.3.1",
     "react-simple-maps": "^0.12.1",
     "react-simple-tooltip": "^2.3.2",
