--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "jest-pnp-resolver": "1.0.1",
     "jest-resolve": "23.6.0",
     "js-file-download": "^0.4.4",
+    "mathjs": "^5.3.0",
     "mini-css-extract-plugin": "0.4.3",
     "moment": "^2.22.2",
     "node-sass": "^4.9.3",
