--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "redux-tooltip": "^0.7.2",
     "resolve": "1.8.1",
     "sass-loader": "^7.1.0",
+    "semaphore": "^1.1.0",
     "style-loader": "0.23.0",
     "terser-webpack-plugin": "1.1.0",
     "url-loader": "1.1.1",
